@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: macFCmd.test,v 1.7 2000/04/10 17:19:02 ericm Exp $
+# RCS: @(#) $Id: macFCmd.test,v 1.7.2.1 2002/06/05 12:05:23 das Exp $
 #
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -36,9 +36,9 @@ test macFCmd-1.1 {GetFileFinderAttributes - no file} {macOnly} {
 test macFCmd-1.2 {GetFileFinderAttributes - creator} {macOnly} {
     catch {file delete -force foo.file}
     catch {close [open foo.file w]}
-    list [catch {file attributes foo.file -creator} msg] $msg \
-	    [file delete -force foo.file]
-} {0 {MPW } {}}
+    list [catch {file attributes foo.file -creator} msg] \
+	    [regexp {MPW |CWIE} $msg] [file delete -force foo.file]
+} {0 1 {}}
 test macFCmd-1.3 {GetFileFinderAttributes - type} {macOnly} {
     catch {file delete -force foo.file}
     catch {close [open foo.file w]}
